lexer_parser/src/test/exempleFile/miniJaja/success/whileFull.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du while	*/
/************************/

class whileFull {

	main {
        int x = 0;
        while(true){
            x++;
            x = x - 1;
            x = x * 1 ;
        };

	}
}