lexer_parser/src/test/exempleFile/miniJaja/fail/whileNoBody.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du while	*/
/************************/

class whileNoBody {

	main {
        while(true) ;

	}
}
